--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ const imageSize = {
             });
         });
         
-        // 清除所有
+        // 清除全部座標
         clearBtn.addEventListener('click', () => {
             if (confirm('確定要清除所有座標點嗎？')) {
                 coordinates = [];
